First Athena Run

--- a/plgrid_grokking_modadd.ipynb
+++ b/plgrid_grokking_modadd.ipynb
@@ -127,7 +127,7 @@
     "    seed: int = 0\n",
     "\n",
     "    # Task: modular addition mod p\n",
-    "    p: int = 113                 # try 113, 131, 251\n",
+    "    p: int = 1000                 # try 113, 131, 251 :)\n",
     "    train_frac: float = 0.5      # grokking usually appears with partial training set\n",
     "\n",
     "    # Model\n",
